test/src/e2e_vm_tests/test_programs/should_fail/nested_impure/src/main.sw
contract;

fn main() {
    foo();
}

fn foo() {
    bar();
    baz();
}

fn bar() {
    let z = baz();
}

impure fn baz() -> u64 {
  5
}
